added google ads

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet" />
 
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8251271374701937" crossorigin="anonymous"></script>
+
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
