fixed external link error

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		<footer class="footer">
 			<p>
 				about me: some dev who's always converting between ticks and datetimes.<br />
-				<a href="assaker21.github.io" rel="noopener noreferrer" target="_blank">assaker21.github.io</a>
+				<a href="assaker21.github.io">assaker21.github.io</a>
 			</p>
 		</footer>
 	</body>
