--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet" />
 
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8251271374701937" crossorigin="anonymous"></script>
+		<script src="script.js" defer></script>
 
 		<link rel="stylesheet" href="style.css" />
 	</head>
@@ -95,7 +96,7 @@
 		<footer class="footer">
 			<p>
 				about me: some dev who's always converting between ticks and datetimes.<br />
-				<a href="assaker21.github.io">assaker21.github.io</a>
+				<a href="https://assaker21.github.io" target="_blank">assaker21.github.io</a>
 			</p>
 		</footer>
 	</body>
